@@ -5,7 +5,6 @@ Required for alpha 2
 --------------------
 
 Fix syntax highlighting for comments
-Implement SETTICK
 Implement and test missing MEMORY sub-commands
 
 Required for release
