@@ -2,18 +2,27 @@
 
 #include "console.h"
 #include "interrupt.h"
+#include "mmtime.h"
 #include "version.h"
 
 #define skipelement(x)  while(*x) x++
+
+typedef struct {
+    int64_t due_ns;
+    char* interrupt_addr;
+    int64_t period_ns;
+} TickStruct;
 
 /** Accessed from outside this compilation-unit. */
 char *interrupt_return_stmt = NULL;
 
 static int interrupt_count = 0;
 static char *interrupt_any_key_addr = NULL;
+static bool interrupt_pause_flag = false;
 static int interrupt_specific_key = 0;
 static int interrupt_specific_key_pressed = false;
 static char *interrupt_specific_key_addr = NULL;
+static TickStruct interrupt_ticks[NBRSETTICKS + 1];
 
 void interrupt_init() {
     interrupt_clear();
@@ -23,9 +32,15 @@ void interrupt_clear() {
     interrupt_count = 0;
     interrupt_return_stmt = NULL;
     interrupt_any_key_addr = NULL;
+    interrupt_pause_flag = false;
     interrupt_specific_key = 0;
     interrupt_specific_key_pressed = false;
     interrupt_specific_key_addr = NULL;
+    for (int i = 0; i < NBRSETTICKS + 1; ++i) {
+        interrupt_ticks[i].due_ns = 0;
+        interrupt_ticks[i].interrupt_addr = NULL;
+        interrupt_ticks[i].period_ns = 0;
+    }
 }
 
 bool interrupt_running() {
@@ -71,6 +86,23 @@ bool interrupt_check(void) {
         return handle_interrupt(interrupt_specific_key_addr);
     }
 
+    // Check for SETTICK interrupts.
+    int64_t now_ns = mmtime_now_ns();
+    // printf("%ld\n", now_ns);
+    for (int i = 0; i < NBRSETTICKS; ++i) {
+        // printf("Interrupt %d, period = %ld, due = %ld, fn = %ld\n",
+        //         i,
+        //         interrupt_ticks[i].period_ns,
+        //         interrupt_ticks[i].due_ns,
+        //         interrupt_ticks[i].interrupt_addr);
+        if (interrupt_ticks[i].interrupt_addr) {
+            if (now_ns >= interrupt_ticks[i].due_ns) {
+                interrupt_ticks[i].due_ns += interrupt_ticks[i].period_ns;
+                return handle_interrupt(interrupt_ticks[i].interrupt_addr);
+            }
+        }
+    }
+
     return false;
 }
 
@@ -109,6 +141,31 @@ void interrupt_enable_specific_key(int key, char *interrupt_addr) {
     interrupt_specific_key_addr = interrupt_addr;
 }
 
+void interrupt_disable_tick(int irq) {
+    assert(irq >= 0 && irq < NBRSETTICKS);
+    if (interrupt_ticks[irq].interrupt_addr) {
+        interrupt_ticks[irq].due_ns       = 0;
+        interrupt_ticks[irq].interrupt_addr = NULL;
+        interrupt_ticks[irq].period_ns    = 0;
+        interrupt_count--;
+    }
+}
+
+void interrupt_enable_tick(int irq, int64_t period_ns, char *interrupt_addr) {
+    assert(irq >= 0 && irq < NBRSETTICKS);
+    assert(period_ns > 0);
+    assert(interrupt_addr);
+    if (!interrupt_ticks[irq].interrupt_addr) interrupt_count++;
+    interrupt_ticks[irq].due_ns       = mmtime_now_ns() + period_ns;
+    interrupt_ticks[irq].interrupt_addr = interrupt_addr;
+    interrupt_ticks[irq].period_ns    = period_ns;
+    // printf("Interrupt %d, period = %ld, due = %ld, fn = %ld\n",
+    //         irq,
+    //         interrupt_ticks[irq].period_ns,
+    //         interrupt_ticks[irq].due_ns,
+    //         interrupt_ticks[irq].interrupt_addr);
+}
+
 int interrupt_check_key_press(char ch) {
     if (ch == interrupt_specific_key && interrupt_specific_key_addr) {
         interrupt_specific_key_pressed = true;
@@ -116,4 +173,16 @@ int interrupt_check_key_press(char ch) {
     } else {
         return 0;
     }
+}
+
+void interrupt_pause(char *return_stmt) {
+    assert(!interrupt_pause_flag);
+    interrupt_return_stmt = return_stmt;
+    interrupt_pause_flag = true;
+}
+
+bool interrupt_pause_needs_resuming(void) {
+    bool result = interrupt_pause_flag;
+    interrupt_pause_flag = false;
+    return result;
 }
